Page Title and icon updated

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qoutes</title>
+    <title>Qoutes-API</title>
 
     <link rel="stylesheet" href="./style/styles.css">
-    <!-- <link rel="shortcut icon" href="./public/images/favicon.png" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./public/assets/images/fav.png" type="image/x-icon">
 
 </head>
 
