some setting change

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <header>
         <h1>Quotes</h1>
-        <div class="checkbox-wrapper-54">
+        <!-- <div class="checkbox-wrapper-54">
             <label class="switch">
                 <input title="input" onclick="myFunction()" type="checkbox">
                 <span class="slider"></span>
             </label>
-        </div>
+        </div> -->
     </header>
 
 
@@ -61,6 +61,6 @@
         <p>&copy; 2023 Quotes App</p>
     </footer>
 
-    </body>
+</body>
 
 </html>
